# textual-filelink

./: CHANGELOG.md  CLAUDE.md  README.md  prepped_dir.txt  pyproject.toml  refactor-2025-12-22.md  tests.txt
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml
agents/: ruff-linter.md
examples/: README.md  demo_01_filelink.py  demo_02_filelink_with_icons.py  demo_03_filelink_list.py  demo_04_commandlink.py  demo_05_dev_orchestration.py  demo_06_command_templates.py
examples/sample_files/: config.json  notes.txt
scripts/: README.md  build_output.md  capture_demo.py  demo_01_basic_filelink.py  demo_02_toggleable_basics.py  demo_03_icons_simple.py  demo_04_icons_advanced.py  demo_05_state_management.py  demo_06_commandlink_simple.py  demo_07_async_orchestration.py  demo_08_editor_config.py  demo_09_file_browser.py  demo_10_datatable_files.py  demo_11_error_handling.py  demo_commandlink.py  demo_commandlink_captures.toml  demo_commandlink_compressed.py  demo_commandlink_compressed_captures.toml  demo_file_link.py  demo_file_link_improved.py  demo_multiple_icons.py  deploy_output.md  fetch-data_output.md  generate-report_output.md  lint_output.md  llm_review.toml  process-files_output.md  test_custom_keys.py  test_custom_keys_capture.toml  test_open_keys.py  test_open_keys_capture.toml  tests_output.md  tmp.py  verify_demo_02.toml  verify_demo_06.toml
scripts/sample_files/: LICENSE  Makefile  README.md  data.csv  example.py
src/textual_filelink/: __init__.py  command_link.py  command_link_old.py  file_link.py  file_link_list.py  file_link_with_icons.py  icon.py  toggleable_file_link.py  utils.py
tests/: conftest.py  test_command_link.py  test_file_link.py  test_file_link_list.py  test_file_link_with_icons.py  test_integration.py  test_toggleable_file_link.py  test_tooltip_enhancement.py
